basic page & language

--- a/src/App.less
+++ b/src/App.less
@@ -13,6 +13,13 @@
     .ant-menu-item {
       height: 100px;
     }
+    .ant-layout-header {
+      background: white;
+      text-align: left;      
+    }
+    .trigger {
+      cursor: pointer
+    }
   }
 }
 
