--- a/src/pages/pages.less
+++ b/src/pages/pages.less
@@ -36,6 +36,12 @@
     }
     .snapViewWrapper {
         margin: 20px;
+        .scoreWrapper {
+            border: 1px solid;
+        }
+        .snapPicWrapper {
+            border: 1px solid;
+        }
     }
     .btnWrapper {
         text-align: center
