--- a/src/App.less
+++ b/src/App.less
@@ -1,7 +1,21 @@
 .App {
-  text-align: center;
-  height: 100%;
-  width: 100%;
+  background: url("./asserts/Lighthouse.jpg") no-repeat;
+  height: 900px;
+  background-size: cover;
+  opacity: 0.8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+    .inputWrapper {
+      padding: 50px 0;
+      margin: auto;
+      width: 80%;
+      height: 70%;
+      background: black;
+      opacity: 0.8;
+      border-radius: 50px;
+      box-shadow:0 0 3px 10px black;
+    }
   .sider {
     min-height: 100vh;
   }
@@ -14,11 +28,14 @@
       height: 100px;
     }
     .ant-layout-header {
-      background: white;
+      -webkit-backdrop-filter: blur(20px);
+      backdrop-filter: blur(20px);
+      background: rgba(0, 0, 0, 0.7);
       text-align: left;      
     }
     .trigger {
-      cursor: pointer
+      cursor: pointer;
+      color: white;
     }
   }
 }
