--- a/src/pages/index/pages.less
+++ b/src/pages/index/pages.less
@@ -51,6 +51,11 @@
     }
     .itemWrapper {
         margin: 20px 0;
+        :global {
+            .ant-input-affix-wrapper {
+                display: inline;
+            }
+        }
         span {
             color: #ffffff;
             margin-right: 10px;
