--- a/src/App.less
+++ b/src/App.less
@@ -1,26 +1,21 @@
 .App {
-  text-align: center;
-  height: 100%;
-  width: 100%;
-  .sider {
-    min-height: 100vh;
-  }
-
-  .logo {
-    height: 250px;
-  }
-  :global {
-    .ant-menu-item {
-      height: 100px;
+  background: url("./asserts/Lighthouse.jpg") no-repeat;
+  height: 900px;
+  background-size: cover;
+  opacity: 0.8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+    .inputWrapper {
+      padding: 50px 0;
+      margin: auto;
+      width: 80%;
+      height: 70%;
+      background: black;
+      opacity: 0.8;
+      border-radius: 50px;
+      box-shadow:0 0 3px 10px black;
     }
-    .ant-layout-header {
-      background: white;
-      text-align: left;      
-    }
-    .trigger {
-      cursor: pointer
-    }
-  }
 }
 
 
