--- a/src/pages/index/pages.less
+++ b/src/pages/index/pages.less
@@ -65,8 +65,8 @@
                 background: transparent;
                 cursor: pointer;
             }
-            .ant-input-suffix {
-                color: gray;
+            .ant-select-selection__clear {
+                background: transparent;
             }
         }
         span {
