--- a/src/pages/AnalysisDetail/AnalysisDetail.less
+++ b/src/pages/AnalysisDetail/AnalysisDetail.less
@@ -10,6 +10,12 @@
   .ant-menu {
     background-color: #333744;
   }
+  .ant-layout-footer {
+    text-align: center;
+  }
+  .ant-card-head-title {
+    font-size: 20px;
+  }
   .ant-menu-item {
     height: 50px !important;
     text-align: center;
