--- a/src/pages/AnalysisDetail/AnalysisDetail.less
+++ b/src/pages/AnalysisDetail/AnalysisDetail.less
@@ -11,6 +11,12 @@
   .ant-menu {
     background-color: #333744;
   }
+  .ant-card {
+    display: inline-block;
+  }
+  .ant-card-head-title {
+    font-size: 15px;
+  }
   .ant-layout-footer {
     text-align: center;
   }
