--- a/src/pages/AnalysisDetail/AnalysisDetail.less
+++ b/src/pages/AnalysisDetail/AnalysisDetail.less
@@ -2,7 +2,11 @@
   min-height: 100vh;
   background: #333744;
 }
-
+.headTitle {
+  color: #ffffff;
+  font-size: 20px;
+  font-family: -apple-system;
+}
 .logo {
   height: 100px;
 
