--- a/src/pages/AnalysisDetail/AnalysisDetail.less
+++ b/src/pages/AnalysisDetail/AnalysisDetail.less
@@ -20,10 +20,7 @@
     font-size: 16px !important;
     text-align: left;
   }
-  .ant-card-head {
-    border: none;
-    height: 40px;
-  }
+
 
   .ant-card-meta-title {
     color: #ffffff;
@@ -82,6 +79,12 @@
           margin-right: 10px;
         }
       }
+
+      .ant-card-head {
+        border: none;
+        height: 40px;
+      }
+
       .cardContentItem {
         margin-right: 20px;
       }
@@ -93,4 +96,15 @@
   }
 }
 
-
+.timingWrapper {
+  margin:20px;
+  .indexTitle {
+    font-size: 16px;
+    color: #bfbfbf;
+  }
+  :global {
+    .ant-card-body {
+      padding: 10px 10px 10px 20px;
+    }
+  }
+}
