add timing and navigation

--- a/src/pages/AnalysisDetail/AnalysisDetail.less
+++ b/src/pages/AnalysisDetail/AnalysisDetail.less
@@ -100,7 +100,18 @@
   margin:20px;
   .indexTitle {
     font-size: 16px;
-    color: #bfbfbf;
+    color: #9a9a9a;
+  }
+  .unit {
+    margin-left: 5px;
+  }
+  p {
+    font-size: 20px;
+    color: black;
+    margin-bottom: 10px;
+  }
+  .loadType {
+    font-size: 15px;
   }
   :global {
     .ant-card-body {
