style modify & add pageStats

--- a/src/pages/index/pages.less
+++ b/src/pages/index/pages.less
@@ -18,8 +18,10 @@
             margin: 0 5px;
         }
         .ant-radio-button-wrapper-checked {
-            border: 1px solid #1ABC9C !important;
-            color: #1ABC9C;
+            color: #26d7eb;
+            border-color: #26d7eb;
+            outline: 0;
+            box-shadow: 0 0 0 5px rgba(0, 193, 222, 0.2) !important;
         }
     }
 }
@@ -34,12 +36,17 @@
         .ant-input {
             background: transparent;
             color: white;
+            font-size: 14px;
         }
         .ant-card-bordered {
             background: transparent;
             //border-color: white;
             border: none;
             margin: 0 20px;
+        }
+        .ant-select-selection-selected-value {
+            font-size: 14px;
+            color: white;
         }
         .ant-card-body {
             text-align: left;
