--- a/src/pages/index/pages.less
+++ b/src/pages/index/pages.less
@@ -114,7 +114,8 @@
         }
     }
     .btnWrapper {
-        text-align: center
+        text-align: center;
+        margin-top: 80px;
     }
 }
 
