--- a/src/pages/AnalysisDetail/AnalysisDetail.less
+++ b/src/pages/AnalysisDetail/AnalysisDetail.less
@@ -106,8 +106,9 @@
     margin-left: 5px;
   }
   p {
-    font-size: 20px;
-    color: black;
+    font-size: 25px;
+    font-weight: 500;
+    color: #00C1DE;
     margin-bottom: 10px;
   }
   .loadType {
@@ -124,5 +125,12 @@
   margin: 20px;
   .gridTitle {
     border-bottom: 1px solid #e8e8e8;
+  }
+  :global {
+    .ant-card-grid {
+      width: 30%;
+      padding-top: 10px;
+      margin: 0 20px;
+    }
   }
 }
