gzip data complete

--- a/src/pages/AnalysisDetail/AnalysisDetail.less
+++ b/src/pages/AnalysisDetail/AnalysisDetail.less
@@ -137,7 +137,9 @@
 
 .adviceContainer {
   :global {
-
+    .ant-table-thead {
+      font-size: 16px;
+    }
     .ant-tabs-tab {
       margin: 0 50px 0 50px;
     }
