--- a/src/components/style.less
+++ b/src/components/style.less
@@ -1,3 +1,15 @@
 .itemWrapper {
   margin: 40px 0;
 }
+
+.adviceContainer {
+  :global {
+    .ant-tabs-nav .ant-tabs-tab {
+      font-size: 16px;
+    }
+    .ant-tabs-nav .ant-tabs-tab-active {
+      color: #ffffff;
+      background: #00C1DE;
+    }
+  }
+}
