--- a/src/pages/AnalysisDetail/AnalysisDetail.less
+++ b/src/pages/AnalysisDetail/AnalysisDetail.less
@@ -194,11 +194,15 @@
   margin: 20px;
   :global {
     .ant-card-head-title {
-      font-size: 18px !important;
+      font-size: 17px !important;
       color: rgba(0,0,0,.65);
+      font-family: sans-serif;
     }
     .ant-card-body {
       padding: 0;
+    }
+    .ant-tabs-nav-wrap {
+      margin-left: 20px;
     }
   };
 }
